2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/modules.php: Added default value for tag
	filter and added "All" option to modules group and tag filters

        * mobile/operation/modules.php: Fixed a style bug related to
        filter explanation update on module search on mobile console.

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events when not found the
	agent, before it returned the systems events, now it returns empty
	list.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/agents.php: Removed a filter option which 
	didn't work.

2013-12-03  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed sql error in tag tab.

	* ChangeLog: Fixed date in my previous commit.

2013-12-02  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed tree expansion failure
	by module.

2013-12-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the old visual maps from
	pandora4, now it is showed the values in the simple value.

2013-12-01  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_modules.php: Corrected agent counting by module
	group.

2013-11-30  Junichi Satoh  <junichi@rworks.jp>

	* operation/tree.php, operation/agentes/datos_agente.php,
	operation/reporting/reporting_viewer.php, 
	operation/reporting/graph_viewer.php: Added missing extension for
	jquery-ui-timepicker.

2013-11-30  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_treeview.php: Fixed tree expansion failure in
	module based tree view when module name includes some symbols.

2013-11-28  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css
	mobile/operation/networkmap.php
	mobile/operation/home.php
	mobile/operation/modules.php
	mobile/operation/alerts.php
	mobile/operation/networkmaps.php
	mobile/operation/agent.php
	mobile/operation/groups.php